hands-on/istio/lab7-circuit-breaker/destinationrules.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: m-caj-masterfile
spec:
  host: m-caj-masterfile
  subsets:
  - labels:
      version: v1
    name: v1
    trafficPolicy:
      connectionPool:
        http:
          http1MaxPendingRequests: 1
          maxRequestsPerConnection: 1
        tcp:
          maxConnections: 1
      outlierDetection:
        baseEjectionTime: 3m
        consecutive5xxErrors: 1
        interval: 1s
        maxEjectionPercent: 100
